<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Transport Stream Player</string>
    <string name="app_name">tsplayer</string>
    <string name="center_title">Transport Stream Player</string>
    <string name="frequency">Frequency in MHz:</string>
    <string name="Sym_rate">Symbol Rate:</string>
    <string name="qam64">QAM64</string>
    <string name="freq_init">650</string>
    <string name="symbol_init">6875</string>
    <string name="qam128">QAM256</string>
    <string name="qam256">QAM1024</string>
    <string name="mode">Modulation mode:</string>
    <string name="channel_scan">Click Here to scan channel</string>
    <string name="comments">This is a very simple app to play a transport stream from tuner input. </string>
</resources>
