<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical" android:layout_gravity="center">
<TextView  
    android:text="@string/hello" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:textSize="25sp"/>
<TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frequency"></TextView>

<EditText android:id="@+id/editText1" android:layout_width="match_parent" android:text="@string/freq_init" android:layout_height="wrap_content" android:numeric="integer"></EditText>
<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Sym_rate"></TextView>
<EditText android:id="@+id/editText2" android:layout_width="match_parent" android:text="@string/symbol_init" android:layout_height="wrap_content" android:numeric="integer"></EditText>
<TextView android:text="@string/mode" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<RadioGroup android:id="@+id/radioGroup1" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RadioButton android:layout_height="wrap_content" android:id="@+id/radio0" android:checked="true" android:layout_width="match_parent" android:text="@string/qam64"></RadioButton>
    <RadioButton android:layout_height="wrap_content" android:id="@+id/radio1" android:layout_width="match_parent" android:text="@string/qam128"></RadioButton>
    <RadioButton android:layout_height="wrap_content" android:id="@+id/radio2" android:text="@string/qam256" android:layout_width="match_parent"></RadioButton>
    
</RadioGroup>
<Button android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/channel_scan" android:layout_width="match_parent"></Button>
<TextView android:text="@string/comments" android:layout_gravity="center" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
</LinearLayout>
